# toggle-pulse

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  CODE_PRINCIPLES.md  PROJECT_OVERVIEW.md  README.md  pyproject.toml
.claude/agents/: architect-reviewer.md  code-reviewer.md  devops-engineer.md  docs-architect.md  mermaid-expert.md  python-engineer.md  solution-reviewer.md  test-engineer.md
.claude/commands/: act.md  plan.md
.claude/tasks/: 000-define-toggl-api-contracts.md  001-test-infrastructure-setup.md  002-implement-toggl-client.md  002-test-authentication.md  003-implement-data-transformation.md  003-test-time-entries-fetching.md  004-test-data-transformation.md  005-test-influxdb-operations.md  006-test-scheduler-integration.md  007-test-grafana-endpoints.md  008-test-error-handling-resilience.md  009-test-performance-load.md  010-test-end-to-end-integration.md  PLAN.md
.github/workflows/: ci.yml
.serena/: project.yml
src/python_starter_template/: __init__.py
src/tests/: conftest.py  test_stub.py  test_tools.py
src/tests/fixtures/: sample_data.py
src/toggle_pulse/: __main__.py
src/toggle_pulse/contracts/: __init__.py  influxdb.py  toggl.py
src/toggle_pulse/transformers/: influxdb.py
